Switched to creating setenv.sh for tomcat.